1.5.1: FINALLY FIX GC